--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.2",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.11",
+    "qrcode": "^1.5.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.0.0",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/qrcode": "^1.4.2",
     "node-sass": "^7.0.1",
     "sass": "^1.51.0"
   }
